@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-31T16:23:22Z",
-  "count_outdated" : 203,
-  "uniques_outdated" : 143,
+  "timestamp" : "2023-08-11T08:20:15Z",
+  "count_outdated" : 205,
+  "uniques_outdated" : 144,
   "count" : 206,
   "uniques" : 145,
   "clones" : [
-    {
-      "timestamp": "2023-07-28T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-31T00:00:00Z",
       "count": 1,
